acertos no usuario

--- a/templates/usuario/cadastrar_usuario.html
+++ b/templates/usuario/cadastrar_usuario.html
@@ -28,6 +28,13 @@
                   ok
                 </div>
             </div>
+            <div class="col-md-12">
+              <label for="senha" class="form-label">Confirme Senha:</label>
+              <input type="password" name="conf_senha" class="form-control" id="conf_senha" placeholder="*********" required>
+              <div class="valid-feedback">
+                ok
+              </div>
+          </div>
             <div class="col-12">
               <button class="btn btn-primary" type="submit">Enviar</button>
               <a href="/" class="btn btn-danger"><i class="bi bi-arrow-left-square"></i></a>
