--- a/templates/usuario/login.html
+++ b/templates/usuario/login.html
@@ -9,14 +9,14 @@
     <div class="row  mx-auto mt-3">
         <h2>Login</h2>
         <hr>
-        <form class="col-12 col-md-6 col-xl-5">
+        <form action="/usuario/post_entrar" method="post" class="col-12 col-md-6 col-xl-5">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Senha</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input type="password" name="senha" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
