Procedido os devidos ajustes nas rotas para usuarios,

--- a/templates/lista/alterar_lista.html
+++ b/templates/lista/alterar_lista.html
@@ -12,8 +12,7 @@
                 <input class="form-control" type="text" name="estabelecimento" id="estabelecimento" value="{{lista.estabelecimento}}">
             </div>
             <div>
-                <label for="id_user">ID Usuario:</label><br>
-                <input class="form-control" type="text" name="id_user" id="id_user" placeholder="Usuario nao pode alterar esse campo" value="{{lista.id_user}}">
+                <input class="form-control" type="hidden" name="id_user" id="id_user" placeholder="Usuario nao pode alterar esse campo" value="{{lista.id_user}}">
             </div>
             <div class="col-md-12">
                 <label for="status_lista" class="form-label">Status</label>
