--- a/templates/lista/cadastro_lista.html
+++ b/templates/lista/cadastro_lista.html
@@ -11,8 +11,7 @@
                 <input class="form-control" type="text" name="estabelecimento" id="estabelecimento">
             </div>
             <div>
-                <label for="id_user">ID Usuario:</label><br>
-                <input class="form-control" type="text" name="id_user" id="id_user">
+                <input class="form-control" type="hidden" name="id_user" id="id_user" value="{{usuario.id_usuario}}">
             </div>
             <div class="col-md-12">
                 <label for="status_lista" class="form-label">Status</label>
