--- a/templates/produto/listar_produtos_categoria.html
+++ b/templates/produto/listar_produtos_categoria.html
@@ -6,7 +6,7 @@
     <main class="container-fluid">
         <div class="d-flex justify-content-between mt-3">
             <h2>Produtos</h2>
-            <a href="/produto/cadastrar_produto"> Cadastrar Produto</a>
+            <a href="/produto/cadastrar_produto" class="btn btn-primary"> Cadastrar Produto</a>
         </div>
         <hr>
         <table class="table">
