--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
+    {% set usuario = request.state.usuario%}
     {% include "header.html" %}
     {% include "include/mensagem.html" %}
     {% block conteudo %}{% endblock %}
