--- a/templates/lista/listar_produtos.html
+++ b/templates/lista/listar_produtos.html
@@ -2,6 +2,8 @@
 
 {% block titulo %}Produtos - Lista{% endblock %}
 
+{% set usuario = request.state.usuario%}
+
 {% block conteudo %}
 <main class="container-fluid">
     <div class="row mt-3 d-flex justify-content-between">
