--- a/templates/lista/listas.html
+++ b/templates/lista/listas.html
@@ -5,11 +5,11 @@
 {% block conteudo %}
     <main class="container-fluid">
         <div class="row d-flex justify-content-between mt-3 ">
-            <div class="col-6 col-xl-9 col-md-8">
+            <div class="col-6 col-xl-9 col-md-8 p-0 p-sm-1 ">
                 <h2>Lista</h2>
             </div>
-            <div class="col-6 col-xl-3 col-md-4 justify-content-between">
-                <a href="/lista/cadastrar_lista" class="btn btn-primary"> Cadastrar Lista</a>
+            <div class="col-6 col-xl-3 col-md-4 p-0 p-sm-1 justify-content-between">
+                <a href="/lista/cadastrar_lista" class="btn btn-primary"> Cadastrar</a>
                 <a href="/" class="btn btn-danger"> <i class="bi bi-arrow-left-square"></i></a>
             </div>
         </div>
