--- a/templates/promocao/promocao.html
+++ b/templates/promocao/promocao.html
@@ -18,8 +18,8 @@
         <tr>
             <th>#</th>
             <th>Produtos</th>
-            <th>Promoções</th>
-            <th>Estabelecimentos</th>
+            <th>Valor</th>
+            <th>Mercado</th>
             <th>*</th>
         </tr>
         {% for p in promocao%}
