--- a/templates/header.html
+++ b/templates/header.html
@@ -14,9 +14,13 @@
                 <a class="nav-link text-light" href="/usuario/entrar">Usuario</a>
               </li>
               {%- else: -%}
-              <li class="nav-item">
-                <a class="nav-link text-light" href="/usuario/sair"><i class="bi bi-person-circle" style="padding: 0px;">{{usuario.nome}}</i></a>
-              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="bi bi-person-circle" style="padding: 0px;">{{usuario.nome}}</i>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="/usuario/sair">Sair</a></li>
+                </ul>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Cadastros
@@ -30,9 +34,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link text-light" href="/promocao">Promoções</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="/contato">Contato</a>
               </li>
             </ul>
             <form class="d-flex">
