--- a/templates/promocao/promocao.html
+++ b/templates/promocao/promocao.html
@@ -20,7 +20,9 @@
             <th>Produtos</th>
             <th>Valor</th>
             <th>Mercado</th>
+            {%- if usuario -%}
             <th>*</th>
+            {%- endif -%}
         </tr>
         {% for p in promocao%}
         <tr>
@@ -28,7 +30,9 @@
             <td>{{p.nome_produto}}</td>
             <td>{{p.valor_promocao}}</td>
             <td>{{p.estabelecimento}}</td>
-            <td><a href="" class="btn btn-danger p-1 p-sm-2"><i class="bi bi-bookmark-x"></i></a></td>
+            {%- if usuario -%}
+            <td><a href="/denuncia/promocao/{{p.id_lista}}/{{p.id_produto}}/{{p.nome_produto}}/{{p.estabelecimento}}" class="btn btn-danger p-1 p-sm-2"><i class="bi bi-bookmark-x"></i></a></td>
+            {%- endif -%}
         </tr>
         {% endfor %}
     </table>
